# nginx-asgi-template

./: .env.template  .gitignore  Dockerfile  compose.override.yaml  compose.prod.yaml  compose.yaml  deploy.sh  docker-compose.yaml  entrypoint.sh  nginx.conf  sonar-scanner.sh
.github/workflow/back/: safety.yaml
.github/workflows/: safety-check.yaml
back/: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.dev  clear.sh  entrypoint.sh  pyproject.toml
back/api/: models.py
back/api/core/: messages.py  session.py
back/api/core/models/: __init__.py  authors.py  books.py
back/api/core/routers/: __init__.py  auth.py  authors.py  books.py
back/core/: asgi.py  settings.py
front/: package-lock.json  package.json
front/src/: App.tsx  main.tsx
front/src/components/: Header.tsx
front/src/components/form/: LoginForm.tsx  RegisterForm.tsx
front/src/pages/auth/: login.tsx  register.tsx
